[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "faker>=37.12.0",
    "httpx>=0.28.1",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
    "urllib3>=2.5.0",
    "user-agent>=0.1.14",
]
