[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "brotli>=1.1.0",
    "faker>=37.4.2",
    "python-telegram-bot>=22.2",
    "validators>=0.35.0",
    "urllib3",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "fake-useragent>=1.4.0",
    "httpx>=0.25.0",
]
