[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["MIMIRU"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.14.2",
    "colorama>=0.4.6",
    "fake-useragent>=2.2.0",
    "faker>=37.12.0",
    "pyrogram>=2.0.106",
    "python-telegram-bot[all]>=22.5",
    "tgcrypto>=1.2.5",
    "urllib3>=2.5.0",
]
